--- a/src/main/webapp/app/views/todo-add-tpl.html
+++ b/src/main/webapp/app/views/todo-add-tpl.html
@@ -1,1 +1,36 @@
-Add a Todo template
+<form novalidate>
+	<div id="add-todo-name-form-group" class="mb-3">
+		<label for="add-todo-name" class="col-form-label">Name:</label>
+		<input type="text" class="form-control" id="add-todo-name"
+			   placeholder="Enter name for new Todo...">
+		<div id="add-todo-name-validator" class="invalid-feedback">
+			Please provide a name.
+		</div>
+	</div>
+	<div class="mb-3">
+		<label for="add-todo-description" class="col-form-label">Description:</label>
+		<textarea class="form-control" id="add-todo-description"
+				  placeholder="Enter description for new Todo (optional)..."
+				  maxlength="1024"></textarea>
+		<div class="d-flex justify-content-end">
+			<span class="badge badge-pill bg-secondary mt-3"
+				  id="add-todo-description-char-count"></span>
+		</div>
+	</div>
+	<div>
+		<label class="col-form-label">Phase:</label>
+	</div>
+	<div class="btn-group" role="group">
+		<input type="radio" class="btn-check" name="add-todo-phase"
+			   id="add-todo-phase0" value="0" checked>
+		<label class="btn btn-outline-primary" for="add-todo-phase0">Todo</label>
+
+		<input type="radio" class="btn-check" name="add-todo-phase"
+			   id="add-todo-phase1" value="1">
+		<label class="btn btn-outline-primary" for="add-todo-phase1">In progress</label>
+
+		<input type="radio" class="btn-check" name="add-todo-phase"
+			   id="add-todo-phase2" value="2">
+		<label class="btn btn-outline-primary" for="add-todo-phase2">Done</label>
+	</div>
+</form>
