--- a/src/main/webapp/app/views/task-add-tpl.html
+++ b/src/main/webapp/app/views/task-add-tpl.html
@@ -1,1 +1,18 @@
-Add a new Task
+<form name="addTodoForm" novalidate>
+	<div id="add-task-name-form-group" class="mb-3">
+		<label for="add-task-name" class="col-form-label">Name:</label>
+		<input type="text" class="form-control" id="add-task-name" name="name" ng-model="name"
+			   placeholder="Enter name for new Task..." ng-input="validateFormGroup('add-task-name-form-group')"
+			   required>
+		<div ng-show="addTodoForm.name.$touched && addTodoForm.name.$invalid">
+			Please provide a name.
+		</div>
+	</div>
+	<div>
+		<label class="col-form-label">Actions:</label>
+	</div>
+	<div>
+		<button type="button" class="btn btn-primary" ng-click="submitAction()">Add</button>
+		<button type="button" class="btn btn-secondary" ng-click="dismissAction()">Cancel</button>
+	</div>
+</form>
