#41 Transition to AngularJS NEW: remove all Todos, Task details (read-only) FIX: growl messages in Task operations (checkTask, removeTask) NEW: show Task ID in card template + edit button + disable removeAllTasks button if no Tasks FIX: rename remove to removeAll in some places FIX: removed unnecessary injections for each controllers FIX: names in form templates

--- a/src/main/webapp/app/views/task-add-tpl.html
+++ b/src/main/webapp/app/views/task-add-tpl.html
@@ -1,10 +1,10 @@
-<form name="addTodoForm" novalidate>
+<form name="addTaskForm" novalidate>
 	<div id="add-task-name-form-group" class="mb-3">
 		<label for="add-task-name" class="col-form-label">Name:</label>
 		<input type="text" class="form-control" id="add-task-name" name="name" ng-model="name"
 			   placeholder="Enter name for new Task..." ng-input="validateFormGroup('add-task-name-form-group')"
 			   required>
-		<div ng-show="addTodoForm.name.$touched && addTodoForm.name.$invalid">
+		<div ng-show="addTaskForm.name.$touched && addTaskForm.name.$invalid">
 			Please provide a name.
 		</div>
 	</div>
