--- a/src/main/webapp/app/views/task-details-tpl.html
+++ b/src/main/webapp/app/views/task-details-tpl.html
@@ -1,1 +1,26 @@
-View Task details
+<form name="editTaskForm" novalidate>
+	<div id="edit-task-name-form-group" class="mb-3">
+		<label for="edit-task-name" class="col-form-label">Name:</label>
+		<input type="text" class="form-control" id="edit-task-name" name="name" ng-model="name" ng-value="name"
+			   placeholder="Change name for this Task..." ng-input="validateFormGroup('edit-task-name-form-group')"
+			   ng-disabled="true" required>
+		<div ng-show="editTaskForm.name.$touched && editTaskForm.name.$invalid">
+			Please provide a name.
+		</div>
+	</div>
+	<div class="mb-3">
+		<span>
+			<label class="col-form-label">Is Task done?</label>
+		</span>
+		<input class="form-check-input" type="checkbox" ng-checked="done" ng-disabled="true"
+			   data-toggle="tooltip" data-placement="bottom" title="Task check status">
+	</div>
+	<div>
+		<div>
+			<label class="col-form-label">Actions:</label>
+		</div>
+		<div>
+			<button type="button" class="btn btn-secondary" ng-click="dismissAction()">Close</button>
+		</div>
+	</div>
+</form>
