--- a/src/main/webapp/app/views/task-removeall-tpl.html
+++ b/src/main/webapp/app/views/task-removeall-tpl.html
@@ -5,6 +5,6 @@
 	<div>Are you sure to remove all Task for This Todo ({{ name }})?</div>
 </div>
 <div>
-	<button type="button" class="btn btn-danger" ng-click="submitAction()">Remove</button>
+	<button type="button" class="btn btn-danger" ng-click="submitAction()">Remove All</button>
 	<button type="button" class="btn btn-secondary" ng-click="dismissAction()">Cancel</button>
 </div>
