#41 Transition to AngularJS card_tpl.html: disable task buttons within group global_service.js: set common options to default task-add-controller.js, todo-add-controller.js, todo-details-controller.js: focus on name field task-details-tpl.html: fixed checkbox display todo-list-controller.js, todo-list-tpl.html: basics of sorting Todos

--- a/src/main/webapp/app/views/task-details-tpl.html
+++ b/src/main/webapp/app/views/task-details-tpl.html
@@ -9,10 +9,9 @@
 		</div>
 	</div>
 	<div class="mb-3">
-		<span>
-			<label class="col-form-label">Is Task done?</label>
-		</span>
-		<input class="form-check-input" type="checkbox" ng-checked="done" ng-disabled="true"
+		<label for="task_check_status">Is Task done?</label>
+		<input class="form-check-input" type="checkbox" id="task_check_status"
+			   ng-checked="done" ng-disabled="true"
 			   data-toggle="tooltip" data-placement="bottom" title="Task check status">
 	</div>
 	<div>
