--- a/src/main/webapp/app/views/todo-list-tpl.html
+++ b/src/main/webapp/app/views/todo-list-tpl.html
@@ -1,4 +1,22 @@
-<div class="table">
+<div>
+	<div>Sorting:</div>
+	<div class="dropdown">
+		<button class="btn btn-primary dropdown-toggle" type="button" id="todoSortingMenu" data-bs-toggle="dropdown"
+				ng-disabled="!todo_count">
+			Sort Todos by
+		</button>
+		<ul class="dropdown-menu">
+			<li ng-repeat="(fieldName,fieldDisp) in todoSortingFields">
+				<div class="dropdown-item" ng-click="sortTodos(fieldName,fieldDisp)">{{ fieldDisp }}</div>
+			</li>
+		</ul>
+	</div>
+	<input class="form-check-input" type="checkbox" ng-checked="task.done" id="todo_sorting_direction"
+		   data-toggle="tooltip" data-placement="bottom" title="Toggle sorting direction"
+		   ng-disabled="!todo_count">
+	<label for="todo_sorting_direction">Descending</label>
+</div>
+<div class="table mt-3">
 	<div class="row border border-secondary rounded">
 		<div class="col" ng-repeat="phase in phase_labels">
 			<h1 class="display-5 mt-1 mb-3">{{phase}}</h1>
@@ -11,13 +29,14 @@
 		</div>
 	</div>
 </div>
-<div class="d-grid gap-2 w-25 my-2">
+<div class="d-grid gap-2 w-25 my-2" ng-if="!readonlyTodo">
 	<button type="button" class="btn btn-primary" ng-click="addTodo()"
 			data-toggle="tooltip" data-placement="bottom" title="Add new Todo">
 		<i class="fas fa-plus"></i>
 	</button>
 	<button type="button" class="btn btn-danger btn-sm" ng-click="removeAllTodos()"
-			data-toggle="tooltip" data-placement="bottom" title="Remove all Todos">
+			data-toggle="tooltip" data-placement="bottom" title="Remove all Todos"
+			ng-disabled="!todo_count">
 		<i class="fas fa-broom"></i>
 	</button>
 </div>
