--- a/src/main/webapp/app/views/todo-list-tpl.html
+++ b/src/main/webapp/app/views/todo-list-tpl.html
@@ -6,14 +6,21 @@
 			<h1 class="display-5 mt-1 mb-3">{{phase}}</h1>
 
 			<div class="border border-secondary rounded" ng-if="todo_list[$index].length">
-				<div>Sorting for '{{phase}}':</div>
-				<select class="form-select" ng-model="todo_sorting_field[$index]">
-					<option ng-repeat="(fieldName,fieldDisp) in todoSortingFields" ng-value="fieldName">{{ fieldDisp }}</option>
-				</select>
-				<input class="form-check-input" type="checkbox" id="todo_sorting_direction_{{ $index }}"
-					   data-toggle="tooltip" data-placement="bottom" title="Toggle sorting direction"
-					   ng-model="todo_sorting_direction[$index]">
-				<label for="todo_sorting_direction_{{ $index }}">Descending</label>
+				<div class="mb-3">Sorting for '{{phase}}' phase:</div>
+				<div class="mb-2">
+					<select class="form-select" ng-model="todo_sorting_field[$index]">
+						<option ng-repeat="(fieldName,fieldDisp) in todoSortingFields" ng-value="fieldName">{{ fieldDisp }}</option>
+					</select>
+				</div>
+				<div class="d-flex justify-content-between">
+					<div>
+						<input class="form-check-input" type="checkbox" id="todo_sorting_direction_{{ $index }}"
+							   data-toggle="tooltip" data-placement="bottom" title="Toggle sorting direction"
+							   ng-model="todo_sorting_direction[$index]">
+						<label for="todo_sorting_direction_{{ $index }}">Descending</label>
+					</div>
+					<button type="button" class="btn btn-warning" ng-click="resetSorting($index)">Reset Sorting</button>
+				</div>
 			</div>
 
 			<div ng-if="todo_list[$index].length">
