--- a/src/main/webapp/app/views/todo-list-tpl.html
+++ b/src/main/webapp/app/views/todo-list-tpl.html
@@ -1,7 +1,7 @@
 <div>
 </div>
 <div class="table mt-3">
-	<div class="row border border-secondary rounded">
+	<div class="row border border-3 border-secondary rounded">
 		<div class="col" ng-repeat="phase in phase_labels">
 			<h1 class="display-5 mt-1 mb-3">{{phase}}</h1>
 
@@ -9,7 +9,8 @@
 				<div class="mb-3">Sorting for '{{phase}}' phase:</div>
 				<div class="mb-2">
 					<select class="form-select" ng-model="todo_sorting_field[$index]">
-						<option ng-repeat="(fieldName,fieldDisp) in todoSortingFields" ng-value="fieldName">{{ fieldDisp }}</option>
+						<option ng-repeat="(fieldName,fieldDisp) in todoSortingFields" ng-value="fieldName"
+								ng-click="updateSortingRelatedOptions($index)">{{ fieldDisp }}</option>
 					</select>
 				</div>
 				<div class="d-flex justify-content-between">
