--- a/src/main/webapp/app/views/todo-add-tpl.html
+++ b/src/main/webapp/app/views/todo-add-tpl.html
@@ -3,7 +3,7 @@
 		<label for="add-todo-name" class="col-form-label">Name:</label>
 		<input type="text" class="form-control" id="add-todo-name" name="name" ng-model="name"
 			   placeholder="Enter name for new Todo..." ng-input="validateFormGroup('add-todo-name-form-group')"
-			   ng-keypress="triggerEnterKeyPressed($event, submitAction())" required>
+			   ng-keypress="($event.keyCode == 13) && submitAction()" required>
 		<!-- >
 		<div ng-show="addTodoForm.name.$touched && addTodoForm.name.$invalid">
 			Please provide a name.
@@ -15,10 +15,9 @@
 		<textarea class="form-control" id="add-todo-description" ng-model="description"
 				  placeholder="Enter description for new Todo (optional)..."
 				  maxlength="{{ descriptionMaxLength }}"
-				  ng-keypress="triggerEnterKeyPressed($event, submitAction())"></textarea>
+				  ng-keypress="($event.keyCode == 13) && submitAction()"></textarea>
 		<div class="d-flex justify-content-end">
-			<span class="badge badge-pill bg-secondary mt-3"
-				  id="add-todo-description-char-count"></span>
+			<span class="badge badge-pill bg-secondary mt-3">{{ descriptionMaxLength - description.length }}</span>
 		</div>
 	</div>
 	<div class="mb-3">
