#41 Transition to AngularJS FIX: adding Tasks can be triggered by pressing Enter key FIX: removed console.log() calls FIX: submit by key event in Todo-Task form templates - appending .preventDefault() FIX: return promise object to submitAction() function caller in Todo-Task form controllers - in order to make preventDefault() working FIX: removed key event of description field from Todo templates

--- a/src/main/webapp/app/views/todo-add-tpl.html
+++ b/src/main/webapp/app/views/todo-add-tpl.html
@@ -3,7 +3,7 @@
 		<label for="add-todo-name" class="col-form-label">Name:</label>
 		<input type="text" class="form-control" id="add-todo-name" name="name" ng-model="name"
 			   placeholder="Enter name for new Todo..." ng-input="validateFormGroup('add-todo-name-form-group')"
-			   ng-keypress="($event.keyCode == 13) && submitAction()" required>
+			   ng-keypress="($event.keyCode == 13) && submitAction() && $event.preventDefault()" required>
 		<!-- >
 		<div ng-show="addTodoForm.name.$touched && addTodoForm.name.$invalid">
 			Please provide a name.
@@ -14,8 +14,7 @@
 		<label for="add-todo-description" class="col-form-label">Description:</label>
 		<textarea class="form-control" id="add-todo-description" ng-model="description"
 				  placeholder="Enter description for new Todo (optional)..."
-				  maxlength="{{ descriptionMaxLength }}"
-				  ng-keypress="($event.keyCode == 13) && submitAction()"></textarea>
+				  maxlength="{{ descriptionMaxLength }}"></textarea>
 		<div class="d-flex justify-content-end">
 			<span class="badge badge-pill bg-secondary mt-3">{{ descriptionMaxLength - description.length }}</span>
 		</div>
