--- a/src/main/webapp/app/views/todo-details-tpl.html
+++ b/src/main/webapp/app/views/todo-details-tpl.html
@@ -3,7 +3,7 @@
 		<label for="edit-todo-name" class="col-form-label">Name:</label>
 		<input type="text" class="form-control" id="edit-todo-name" name="name" ng-model="name" ng-value="name"
 			   placeholder="Change name for this Todo..." ng-input="validateFormGroup('edit-todo-name-form-group')"
-			   ng-keypress="($event.keyCode == 13) && submitAction()"	required>
+			   ng-keypress="($event.keyCode == 13) && submitAction() && $event.preventDefault()"	required>
 		<!-- >
 		<div ng-show="editTodoForm.name.$touched && editTodoForm.name.$invalid">
 			Please provide a name.
@@ -14,8 +14,7 @@
 		<label for="edit-todo-description" class="col-form-label">Description:</label>
 		<textarea class="form-control" id="edit-todo-description" ng-model="description" ng-value="description"
 				  placeholder="Change description for this Todo..."
-				  maxlength="{{ descriptionMaxLength }}"
-				  ng-keypress="($event.keyCode == 13) && submitAction()"></textarea>
+				  maxlength="{{ descriptionMaxLength }}"></textarea>
 		<div class="d-flex justify-content-end">
 			<span class="badge badge-pill bg-secondary mt-3">{{ descriptionMaxLength - description.length }}</span>
 		</div>
