#41 Transition to AngularJS deleted useless files for modals index.html: commented jQuery dependencies all controller js: replaced $.growl. function calls to console.log() Todo-Task controllers: commented jQuery focus() calls removed function definitions for handling Task list collapse tried to fix phase selection in add Todo form

--- a/src/main/webapp/app/views/todo-add-tpl.html
+++ b/src/main/webapp/app/views/todo-add-tpl.html
@@ -24,10 +24,10 @@
 			<label class="col-form-label">Phase:</label>
 		</div>
 		<div class="btn-group" role="group">
-			<div ng-repeat="phase in phase_labels">
-				<input type="radio" class="btn-check" name="add-todo-phase"
-					   id="add-todo-phase{{ $index }}" value="{{ $index }}" ng-checked="$index == 0">
-				<label class="btn btn-outline-primary" for="add-todo-phase{{ $index }}">{{ phase }}</label>
+			<div ng-repeat="_phase in phase_labels">
+				<input type="radio" class="btn-check" name="add-todo-phase" ng-model="phase"
+					   id="add-todo-phase{{ $index }}" ng-value="{{ $index }}" ng-checked="phase_checked[$index]">
+				<label class="btn btn-outline-primary" for="add-todo-phase{{ $index }}">{{ _phase }}</label>
 			</div>
 		</div>
 	</div>
