--- a/src/main/webapp/app/views/todo-list-tpl.html
+++ b/src/main/webapp/app/views/todo-list-tpl.html
@@ -5,28 +5,47 @@
 		<div class="col" ng-repeat="phase in phase_labels">
 			<h1 class="display-5 mt-1 mb-3">{{phase}}</h1>
 
-			<div class="border border-secondary rounded" ng-if="todo_list[$index].length">
-				<div class="mb-3">Sorting for '{{phase}}' phase:</div>
+			<div class="border border-secondary rounded mt-2" ng-if="todo_list[$index].length">
+				<div class="mb-3">Sorting of Todos in '{{phase}}' phase:</div>
 				<div class="mb-2">
-					<select class="form-select" ng-model="todo_sorting_field[$index]">
-						<option ng-repeat="(fieldName,fieldDisp) in todoSortingFields" ng-value="fieldName"
-								ng-click="updateSortingRelatedOptions($index)">{{ fieldDisp }}</option>
+					<select class="form-select" ng-model="todo_sorting_field[$index]"
+							data-toggle="tooltip" data-placement="bottom" title="Todo sorting field">
+						<option ng-repeat="(todoFieldName,todoFieldDisp) in todoSortingFields" ng-value="todoFieldName"
+								ng-click="updateSortingRelatedOptions($index)">{{ todoFieldDisp }}</option>
 					</select>
 				</div>
 				<div class="d-flex justify-content-between">
-					<div>
+					<div data-toggle="tooltip" data-placement="bottom" title="Todo sorting direction">
 						<input class="form-check-input" type="checkbox" id="todo_sorting_direction_{{ $index }}"
-							   data-toggle="tooltip" data-placement="bottom" title="Toggle sorting direction"
 							   ng-model="todo_sorting_direction[$index]">
 						<label for="todo_sorting_direction_{{ $index }}">Descending</label>
 					</div>
-					<button type="button" class="btn btn-warning" ng-click="resetSorting($index)">Reset Sorting</button>
+					<button type="button" class="btn btn-warning" ng-click="resetTodoSorting($index)">Reset Todo Sorting</button>
+				</div>
+			</div>
+
+			<div class="border border-secondary rounded mt-2" ng-if="task_count[$index]">
+				<div class="mb-3">Sorting of Tasks in '{{phase}}' phase:</div>
+				<div class="mb-2">
+					<select class="form-select" ng-model="task_sorting_field[$index]"
+							data-toggle="tooltip" data-placement="bottom" title="Task sorting field">
+						<option ng-repeat="(taskFieldName,taskFieldDisp) in taskSortingFields" ng-value="taskFieldName">{{ taskFieldDisp }}</option>
+					</select>
+				</div>
+				<div class="d-flex justify-content-between">
+					<div data-toggle="tooltip" data-placement="bottom" title="Task sorting direction">
+						<input class="form-check-input" type="checkbox" id="task_sorting_direction_{{ $index }}"
+							   ng-model="task_sorting_direction[$index]">
+						<label for="task_sorting_direction_{{ $index }}">Descending</label>
+					</div>
+					<button type="button" class="btn btn-warning" ng-click="resetTaskSorting($index)">Reset Task Sorting</button>
 				</div>
 			</div>
 
 			<div ng-if="todo_list[$index].length">
 				<div ng-repeat="todo in todo_list[$index] | orderBy:todo_sorting_field[$index]:todo_sorting_direction[$index]">
-					<tsz-card content="{{todo}}"></tsz-card>
+					<tsz-card content="{{todo}}"
+							  task_sort_field="task_sorting_field[$index]" task_sort_dir="task_sorting_direction[$index]"></tsz-card>
 				</div>
 			</div>
 			<tsz-todo-emptiness-indicator ng-if="!todo_list[$index].length"></tsz-todo-emptiness-indicator>
